--- a/sass/components/_active-page.scss
+++ b/sass/components/_active-page.scss
@@ -1,16 +1,20 @@
 .active-page {
-  color: var(--accent-color);
+  @media screen and (min-width: 768px) {
+    color: var(--accent-color);
+  }
 }
 
 .active-page::after {
-  position: absolute;
-  content: "";
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    content: "";
 
-  bottom: 0;
+    bottom: 0;
 
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+  }
 }
