--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,16 +1,18 @@
 .conteiner {
-  width: 1200px;
   padding-right: 15px;
   padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
-}
 
-.conteiner.bottom {
-  display: flex;
-  align-items: baseline;
-}
-.conteiner.bottom > a {
-  display: inline-block;
-  margin-bottom: 20px;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
