--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -1,10 +1,29 @@
 .filter {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
 
-  &__item:not(:last-child) {
-    margin-right: 8px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
+
+  &__item {
+    &:not(:last-child) {
+      margin-right: 8px;
+    }
+    @media screen and (max-width: 767px) {
+      &:not(:nth-last-child(-n + 2)) {
+        margin-bottom: 15px;
+      }
+    }
   }
 
   &__btn {
