--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,6 +5,18 @@
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+
+  @media screen and (min-width: 768px) {
+    margin-right: auto;
+    font-size: 24px;
+    line-height: 1.1666;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
+    font-size: 26px;
+    line-height: 1.1923;
+  }
 }
 
 .logo--dark {
