--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,16 +1,26 @@
 .clients {
   &__title {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.2;
+    font-size: 28px;
+    line-height: 1.1785;
+    letter-spacing: 0.03em;
     color: var(--title-text-color);
     text-align: center;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+
+      font-size: 36px;
+      line-height: 1.2;
+    }
   }
 
   &__list {
     display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
   }
 
   &__link {
@@ -19,7 +29,6 @@
     justify-content: center;
 
     height: 92px;
-    width: 170px;
 
     border: 1px solid var(--team-link-color);
     box-sizing: border-box;
@@ -43,10 +52,17 @@
 
     fill: currentColor;
   }
-}
 
-.clients__item {
-  & + & {
-    margin-left: 30px;
+  &__item {
+    margin: 15px;
+    flex-basis: calc((100% - (2 * 30px)) / 2);
+
+    @media screen and (min-width: 768px) {
+      flex-basis: calc((100% - (3 * 30px)) / 3);
+    }
+
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - (6 * 30px)) / 6);
+    }
   }
 }
