--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -3,11 +3,40 @@
   padding-bottom: 60px;
 
   background-color: var(--footer-bcg-color);
+
+  &__thumb {
+    text-align: center;
+
+    @media screen and (min-width: 768px) {
+      display: flex;
+      align-items: baseline;
+    }
+
+    @media screen and (max-width: 1199px) {
+      margin-bottom: 60px;
+    }
+  }
+}
+
+.footer__address {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-left: auto;
+    margin-right: 165px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: auto;
+    text-align: left;
+  }
 }
 
 .address__item {
   display: block;
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 
   &:last-child {
     margin-bottom: 0;
@@ -22,7 +51,14 @@
 }
 
 .footer-networks {
-  margin-left: 70px;
+  @media screen and (min-width: 768px) {
+    margin-right: auto;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: auto;
+    margin-left: 70px;
+  }
 
   &__title {
     margin-bottom: 20px;
@@ -37,6 +73,8 @@
 
   &__list {
     display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__item + &__item {
@@ -74,16 +112,27 @@
 }
 
 .footer-form {
-  display: flex;
-  align-items: flex-end;
-  margin-left: auto;
+  text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: flex-end;
+    margin-left: auto;
+  }
 
   &__label {
     display: flex;
     flex-direction: column;
+    align-items: center;
+
+    @media screen and (min-width: 1200px) {
+      align-items: flex-start;
+    }
   }
 
   &__title {
+    margin-bottom: 20px;
+
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -94,7 +143,12 @@
   }
 
   &__input {
-    width: 358px;
+    @media screen and (max-width: 1199px) {
+      margin-bottom: 20px;
+    }
+    padding-left: 16px;
+
+    width: 100%;
     height: 50px;
 
     font-size: 16px;
@@ -109,8 +163,17 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
 
-    margin-top: 20px;
-    padding-left: 16px;
+    @media screen and (min-width: 480px) {
+      width: 480px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 450px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+    }
   }
 
   &__btn {
@@ -128,8 +191,11 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 
-    margin-left: 12px;
     padding: 10px 28px;
+
+    @media screen and (min-width: 1199px) {
+      margin-left: 12px;
+    }
   }
 
   &__icon {
@@ -141,4 +207,16 @@
 
     margin-left: 10px;
   }
+}
+
+.container--footer {
+  align-items: baseline;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
+}
+.conteiner.bottom > a {
+  display: inline-block;
+  margin-bottom: 20px;
 }
