--- a/sass/layouts/_gallary.scss
+++ b/sass/layouts/_gallary.scss
@@ -1,22 +1,26 @@
 .portfolio-net {
-  display: flex;
-  flex-wrap: wrap;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
 
   &__item {
-    width: calc((100% - (30px * 2)) / 3);
-    margin-right: 30px;
-    margin-bottom: 30px;
-
-    &:nth-child(3n) {
-      margin-right: 0;
+    &:not(last-child) {
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: 768px) {
+      margin: 15px;
+      width: calc((100% - (30px * 2)) / 2);
     }
 
-    &:nth-last-child(-n + 3) {
-      margin-bottom: 0;
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - (30px * 3)) / 3);
     }
   }
 
   &__link {
+    width: 100%;
     transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: var(--main-cubic);
@@ -51,7 +55,7 @@
 
     color: var(--main-bcg-color);
 
-    transform: translateY(100%);
+    transform: translateY(101%);
     transition-property: transform;
     transition-duration: 250ms;
     transition-timing-function: var(--main-cubic);
