--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,49 +1,156 @@
 .header {
   display: flex;
   align-items: center;
+
+  @media screen and (max-width: 767px) {
+    justify-content: space-between;
+
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+}
+
+.mob-menu.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+
+  transform: translateY(-100%);
+
+  @media screen and (min-width: 768px) {
+    opacity: 1;
+    pointer-events: all;
+    transform: translateY(0);
+
+    display: flex;
+    align-items: center;
+  }
+}
+
+.mob-menu {
+  @media screen and (max-width: 767px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    position: fixed;
+
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+
+    padding: 48px 40px;
+
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible;
+    transition: transform 250ms var(--main-cubic),
+      opacity 250ms var(--main-cubic), visibility 250ms var(--main-cubic);
+  }
+}
+
+.mob-menu-close-btn {
+  position: absolute;
+  top: 21px;
+  right: 25px;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.mob-menu__close-icon {
+  width: 19px;
+  height: 19px;
+
+  fill: currentColor;
+  transition: fill 250ms var(--main-cubic);
+
+  .mob-menu-close-btn:hover &,
+  .mob-menu-close-btn:focus & {
+    fill: var(--accent-color);
+  }
+}
+
+.mob-menu-open-btn {
+  background-color: transparent;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.mob-burger {
+  height: 16px;
+  width: 24px;
+  fill: var(--title-text-color);
+
+  transition: fill 250ms var(--main-cubic);
+
+  .mob-menu-open-btn:focus &,
+  .mob-menu-open-btn:hover & {
+    fill: var(--accent-color);
+  }
 }
 
 .navigation {
-  margin-left: 93px;
-}
+  z-index: 2;
+  @media screen and (min-width: 768px) {
+    margin-right: 84px;
+  }
 
-.header__list {
-  display: flex;
-
-  &.header__contacts {
-    margin-left: auto;
+  @media screen and (min-width: 1200px) {
+    margin-right: 305px;
   }
 }
 
-.header__item {
-  & + & {
-    margin-left: 50px;
-  }
+.navigation__list {
+  @media screen and (min-width: 768px) {
+    display: flex;
 
+    &.header__contacts {
+      margin-left: auto;
+    }
+  }
+}
+
+.navigation__item {
   position: relative;
 
-  display: flex;
   align-items: center;
 
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 32px;
+    }
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+  }
+
+  @media screen and (min-width: 768px) {
+    & + & {
+      margin-left: 50px;
+    }
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
-.header__link {
-  display: flex;
-  align-items: center;
-
-  padding-top: 32px;
-  padding-bottom: 32px;
-
+.navigation__link {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.2;
+  font-size: 40px;
+  line-height: 1.175;
   letter-spacing: 0.02em;
 
   color: var(--title-text-color);
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.1428;
+  }
 
   transition-property: color;
   transition-duration: 250ms;
@@ -54,34 +161,98 @@
     color: var(--accent-color);
   }
 }
+.contacts__list {
+  display: flex;
+  flex-direction: column-reverse;
+  margin-bottom: 64px;
 
-.header__contacts {
-  .header__link {
-    color: var(--primeri-text-color);
+  @media screen and (min-width: 768px) {
+    flex-direction: column;
 
-    &:hover,
-    &:focus {
-      color: var(--accent-color);
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+  }
+}
+
+.contacts__item {
+  cursor: pointer;
+  @media screen and (max-width: 767px) {
+    &:last-child {
+      margin-bottom: 32px;
     }
+  }
+
+  @media screen and (min-width: 768px) {
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
+
+    &:first-child {
+      margin-right: 30px;
+    }
+
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+.contacts__link {
+  display: flex;
+  align-items: center;
+
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.1666;
+  letter-spacing: 0.02em;
+
+  color: var(--primeri-text-color);
+
+  transition: font-size 250ms var(--main-cubic),
+    line-hight 250ms var(--main-cubic), color 250ms var(--main-cubic);
+
+  .contacts__item:hover &,
+  .contacts__item:focus & {
+    @media screen and (max-width: 768px) {
+      font-size: 34px;
+      line-height: 1.1764;
+    }
+
+    color: var(--accent-color);
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
+    line-height: 1.1666;
   }
 }
 
 .pasiv-link::after {
-  position: absolute;
-  content: "";
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    content: "";
 
-  bottom: 0;
+    bottom: 0;
 
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
 
-  transform: scale(0);
-  transition-property: transform;
-  transition-duration: 250ms;
-  transition-timing-function: var(--main-cubic);
+    transform: scale(0);
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: var(--main-cubic);
+  }
 }
 
 .pasiv-link:hover:after,
@@ -90,21 +261,70 @@
 }
 
 .header__icon {
-  margin-right: 10px;
-
-  fill: currentColor;
-
-  &.mail {
-    height: 12px;
-    width: 16px;
+  @media screen and (max-width: 767px) {
+    display: none;
   }
 
-  &.phone {
-    height: 16px;
-    width: 10px;
+  @media screen and (min-width: 768px) {
+    margin-right: 8px;
+
+    fill: currentColor;
+
+    &.mail {
+      height: 10px;
+      width: 14px;
+    }
+
+    &.phone {
+      height: 14px;
+      width: 10px;
+    }
   }
 }
 
 .portfolio-header {
   border-bottom: 1px solid var(--portfolio-border);
+}
+
+.mob-menu__social-list {
+  display: flex;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+.mob-menu__social-item {
+  position: relative;
+  padding-left: 2%;
+  padding-right: 2%;
+  @media screen and (min-width: 480px) {
+    &:not(:last-child) {
+      padding-right: 10px;
+    }
+    &:not(:nth-child(1)) {
+      padding-left: 10px;
+    }
+  }
+
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+
+  &:not(:last-child) {
+    &::after {
+      content: "";
+
+      position: absolute;
+      right: 0;
+
+      height: 100%;
+
+      border: 1px solid var(--primeri-text-color);
+    }
+  }
+}
+
+.mob-menu__link {
+  color: var(--accent-color);
 }
