--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -26,8 +26,14 @@
     margin-bottom: 30px;
 
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.4;
+    font-size: 26px;
+    line-height: 1.62;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 44px;
+      line-height: 1.4;
+    }
+
     text-transform: uppercase;
   }
 
