--- a/sass/layouts/_qualities.scss
+++ b/sass/layouts/_qualities.scss
@@ -1,13 +1,23 @@
 .qualities {
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 0;
+  }
   &__list {
-    display: flex;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin: -15px;
+    }
   }
 
   &__item {
-    margin-right: 30px;
+    @media screen and (min-width: 768px) {
+      margin: 15px;
+      flex-basis: calc((100% - (2 * 30px)) / 2);
+    }
 
-    &:last-child {
-      margin-right: 0;
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - (4 * 30px)) / 4);
     }
   }
 
@@ -37,9 +47,9 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--title-text-color);
-  }
-}
 
-.section.qualities {
-  padding-bottom: 0;
+    @media screen and (max-width: 767px) {
+      text-align: center;
+    }
+  }
 }
