--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,23 +1,35 @@
 .team {
   background-color: var(--team-bcg-color);
-  padding-bottom: 94px;
 
   &__title {
-    margin-bottom: 50px;
-
+    margin-bottom: 30px;
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.2;
-    color: var(--title-text-color);
+    font-size: 28px;
+    line-height: 1.1785;
     text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+
+      font-size: 36px;
+      line-height: 1.166;
+    }
   }
 
   &__list {
-    display: flex;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin: -15px;
+    }
   }
 
   &__item {
-    margin-right: 30px;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
 
     font-size: 16px;
     line-height: 1.2;
@@ -29,8 +41,13 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
-    &:last-child {
-      margin-right: 0;
+    @media screen and (min-width: 768px) {
+      flex-basis: calc((100% - (2 * 30px)) / 2);
+      margin: 15px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - (4 * 30px)) / 4);
     }
   }
 
