--- a/sass/layouts/_works.scss
+++ b/sass/layouts/_works.scss
@@ -1,4 +1,13 @@
 .works {
+  display: none;
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
   &__title {
     margin-bottom: 50px;
 
