--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -16,7 +16,7 @@
     background-size: cover;
     max-width: 1600px;
 
-    background-image: url(../../images/desktop/studio/hero/desk_hero_1600.jpg);
+    background-image: url("../../images/desktop/studio/hero/desk_hero_1600.jpg");
     // @media screen and (max-width: 767px) {
     //   background-image: linear-gradient(
     //       var(--hero-gradient),
