--- a/css/main.css
+++ b/css/main.css
@@ -808,7 +808,7 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 1600px;
-  background-image: url(../../images/desktop/studio/hero/desk_hero_1600.jpg);
+  background-image: url("../../images/desktop/studio/hero/desk_hero_1600.jpg");
 }
 .hero__title {
   margin-bottom: 30px;
