--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -16,60 +16,59 @@
     background-size: cover;
     max-width: 1600px;
 
-    background-image: url("../../images/desktop/studio/hero/desk_hero_1600.jpg");
-    // @media screen and (max-width: 767px) {
-    //   background-image: linear-gradient(
-    //       var(--hero-gradient),
-    //       var(--hero-gradient)
-    //     ),
-    //     url(../../images/mobile/studio/hero/mob_hero_480.jpg);
-    //   @media screen and (min-device-pixel-ratio: 2),
-    //     screen and (min-resolution: 192dpi),
-    //     screen and (min-resolution: 2dppx) {
-    //     background-image: url("../../images/mobile/studio/hero/mob_hero_960.jpg");
-    //   }
-    //   @media screen and (min-device-pixel-ratio: 3),
-    //     screen and (min-resolution: 288dpi),
-    //     screen and (min-resolution: 3dppx) {
-    //     background-image: url("../../images/mobile/studio/hero/mob_hero_1440.jpg");
-    //   }
-    // }
+    @media screen and (max-width: 767px) {
+      background-image: linear-gradient(
+          var(--hero-gradient),
+          var(--hero-gradient)
+        ),
+        url("../../images/mobile/studio/hero/mob_hero_480.jpg");
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url("../../images/mobile/studio/hero/mob_hero_960.jpg");
+      }
+      @media screen and (min-device-pixel-ratio: 3),
+        screen and (min-resolution: 288dpi),
+        screen and (min-resolution: 3dppx) {
+        background-image: url("../../images/mobile/studio/hero/mob_hero_1440.jpg");
+      }
+    }
 
-    // @media screen and (min-width: 768px) {
-    //   background-image: linear-gradient(
-    //       var(--hero-gradient),
-    //       var(--hero-gradient)
-    //     ),
-    //     url(../../images/tablet/studio/hero/tab_hero_768.jpg);
-    //   @media screen and (min-device-pixel-ratio: 2),
-    //     screen and (min-resolution: 192dpi),
-    //     screen and (min-resolution: 2dppx) {
-    //     background-image: url("../../images/tablet/studio/hero/tab_hero_1536.jpg");
-    //   }
-    //   @media screen and (min-device-pixel-ratio: 3),
-    //     screen and (min-resolution: 288dpi),
-    //     screen and (min-resolution: 3dppx) {
-    //     background-image: url("../../images/tablet/studio/hero/tab_hero_2304.jpg");
-    //   }
-    // }
+    @media screen and (min-width: 768px) {
+      background-image: linear-gradient(
+          var(--hero-gradient),
+          var(--hero-gradient)
+        ),
+        url("../../images/tablet/studio/hero/tab_hero_768.jpg");
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url("../../images/tablet/studio/hero/tab_hero_1536.jpg");
+      }
+      @media screen and (min-device-pixel-ratio: 3),
+        screen and (min-resolution: 288dpi),
+        screen and (min-resolution: 3dppx) {
+        background-image: url("../../images/tablet/studio/hero/tab_hero_2304.jpg");
+      }
+    }
 
-    // @media screen and (min-width: 1200px) {
-    //   background-image: linear-gradient(
-    //       var(--hero-gradient),
-    //       var(--hero-gradient)
-    //     ),
-    //     url(../../images/desktop/studio/hero/desk_hero_1600.jpg);
-    //   @media screen and (min-device-pixel-ratio: 2),
-    //     screen and (min-resolution: 192dpi),
-    //     screen and (min-resolution: 2dppx) {
-    //     background-image: url("../../images/desktop/studio/hero/desk_hero_3200.jpg");
-    //   }
-    //   @media screen and (min-device-pixel-ratio: 3),
-    //     screen and (min-resolution: 288dpi),
-    //     screen and (min-resolution: 3dppx) {
-    //     background-image: url("../../images/desktop/studio/hero/desk_hero_4800.jpg");
-    //   }
-    // }
+    @media screen and (min-width: 1200px) {
+      background-image: linear-gradient(
+          var(--hero-gradient),
+          var(--hero-gradient)
+        ),
+        url("../../images/desktop/studio/hero/desk_hero_1600.jpg");
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url("../../images/desktop/studio/hero/desk_hero_3200.jpg");
+      }
+      @media screen and (min-device-pixel-ratio: 3),
+        screen and (min-resolution: 288dpi),
+        screen and (min-resolution: 3dppx) {
+        background-image: url("../../images/desktop/studio/hero/desk_hero_4800.jpg");
+      }
+    }
   }
 
   &__title {
