--- a/css/main.css
+++ b/css/main.css
@@ -843,18 +843,18 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .hero--bg {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(var(--hero-gradient)), to(var(--hero-gradient))), url("../../images/desktop/studio/hero/desk_hero_1600.jpg");
-    background-image: linear-gradient(var(--hero-gradient), var(--hero-gradient)), url("../../images/desktop/studio/hero/desk_hero_1600.jpg");
+    background-image: -webkit-gradient(linear, left top, left bottom, from(var(--hero-gradient)), to(var(--hero-gradient))), url(../../images/desktop/studio/hero/desk_hero_1600.jpg);
+    background-image: linear-gradient(var(--hero-gradient), var(--hero-gradient)), url(../../images/desktop/studio/hero/desk_hero_1600.jpg);
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero--bg {
-    background-image: url("../../images/desktop/studio/hero/desk_hero_3200.jpg");
+    background-image: url(../../images/desktop/studio/hero/desk_hero_3200.jpg);
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 3), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 3), screen and (min-width: 1200px) and (min-resolution: 288dpi), screen and (min-width: 1200px) and (min-resolution: 3dppx) {
   .hero--bg {
-    background-image: url("../../images/desktop/studio/hero/desk_hero_4800.jpg");
+    background-image: url(../../images/desktop/studio/hero/desk_hero_4800.jpg);
   }
 }
 .hero__title {
