--- a/css/main.css
+++ b/css/main.css
@@ -796,7 +796,6 @@ img {
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: var(--footer-bcg-color);
   color: var(--main-bcg-color);
   text-align: center;
   letter-spacing: 0.06em;
@@ -843,18 +842,18 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .hero--bg {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(var(--hero-gradient)), to(var(--hero-gradient))), url(../../images/desktop/studio/hero/desk_hero_1600.jpg);
-    background-image: linear-gradient(var(--hero-gradient), var(--hero-gradient)), url(../../images/desktop/studio/hero/desk_hero_1600.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(var(--hero-gradient)), to(var(--hero-gradient))), url("../../images/desktop/studio/hero/desk_hero_1600.jpg");
+    background-image: linear-gradient(var(--hero-gradient), var(--hero-gradient)), url("../../images/desktop/studio/hero/desk_hero_1600.jpg");
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero--bg {
-    background-image: url(../../images/desktop/studio/hero/desk_hero_3200.jpg);
+    background-image: url("../../images/desktop/studio/hero/desk_hero_3200.jpg");
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 3), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 3), screen and (min-width: 1200px) and (min-resolution: 288dpi), screen and (min-width: 1200px) and (min-resolution: 3dppx) {
   .hero--bg {
-    background-image: url(../../images/desktop/studio/hero/desk_hero_4800.jpg);
+    background-image: url("../../images/desktop/studio/hero/desk_hero_4800.jpg");
   }
 }
 .hero__title {
