--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -2,7 +2,7 @@
   padding-top: 200px;
   padding-bottom: 200px;
 
-  background-color: var(--footer-bcg-color);
+  // background-color: var(--footer-bcg-color);
   color: var(--main-bcg-color);
   text-align: center;
   letter-spacing: 0.06em;
@@ -57,16 +57,16 @@
           var(--hero-gradient),
           var(--hero-gradient)
         ),
-        url(../../images/desktop/studio/hero/desk_hero_1600.jpg);
+        url("../../images/desktop/studio/hero/desk_hero_1600.jpg");
       @media screen and (min-device-pixel-ratio: 2),
         screen and (min-resolution: 192dpi),
         screen and (min-resolution: 2dppx) {
-        background-image: url(../../images/desktop/studio/hero/desk_hero_3200.jpg);
+        background-image: url("../../images/desktop/studio/hero/desk_hero_3200.jpg");
       }
       @media screen and (min-device-pixel-ratio: 3),
         screen and (min-resolution: 288dpi),
         screen and (min-resolution: 3dppx) {
-        background-image: url(../../images/desktop/studio/hero/desk_hero_4800.jpg);
+        background-image: url("../../images/desktop/studio/hero/desk_hero_4800.jpg");
       }
     }
   }
