--- a/css/main.css
+++ b/css/main.css
@@ -796,6 +796,7 @@ img {
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
+  background-color: var(--footer-bcg-color);
   color: var(--main-bcg-color);
   text-align: center;
   letter-spacing: 0.06em;
