--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -2,7 +2,7 @@
   padding-top: 200px;
   padding-bottom: 200px;
 
-  // background-color: var(--footer-bcg-color);
+  background-color: var(--footer-bcg-color);
   color: var(--main-bcg-color);
   text-align: center;
   letter-spacing: 0.06em;
