--- a/css/main.css
+++ b/css/main.css
@@ -804,15 +804,15 @@ img {
 .hero--bg {
   margin-left: auto;
   margin-right: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 1600px;
 }
 @media screen and (max-width: 767px) {
   .hero--bg {
     background-image: -webkit-gradient(linear, left top, left bottom, from(var(--hero-gradient)), to(var(--hero-gradient))), url(../../images/mobile/studio/hero/mob_hero_480.jpg);
     background-image: linear-gradient(var(--hero-gradient), var(--hero-gradient)), url(../../images/mobile/studio/hero/mob_hero_480.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    max-width: 1600px;
   }
 }
 @media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
@@ -833,7 +833,7 @@ img {
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero--bg {
-    background-image: url("../../images/tablet/studio/hero/tab_hero_1536.jpg");
+    background-image: url("../images/tablet/studio/hero/tab_hero_1536.jpg");
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 3), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 3), screen and (min-width: 768px) and (min-resolution: 288dpi), screen and (min-width: 768px) and (min-resolution: 3dppx) {
@@ -843,18 +843,18 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .hero--bg {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(var(--hero-gradient)), to(var(--hero-gradient))), url(../../images/desktop/studio/hero/desk_hero_1600.jpeg);
-    background-image: linear-gradient(var(--hero-gradient), var(--hero-gradient)), url(../../images/desktop/studio/hero/desk_hero_1600.jpeg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(var(--hero-gradient)), to(var(--hero-gradient))), url(../images/desktop/studio/hero/desk_hero_1600.jpeg);
+    background-image: linear-gradient(var(--hero-gradient), var(--hero-gradient)), url(../images/desktop/studio/hero/desk_hero_1600.jpeg);
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero--bg {
-    background-image: url(../../images/desktop/studio/hero/desk_hero_3200.jpeg);
+    background-image: url(../images/desktop/studio/hero/desk_hero_3200.jpeg);
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 3), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 3), screen and (min-width: 1200px) and (min-resolution: 288dpi), screen and (min-width: 1200px) and (min-resolution: 3dppx) {
   .hero--bg {
-    background-image: url(../../images/desktop/studio/hero/desk_hero_4800.jpeg);
+    background-image: url(../images/desktop/studio/hero/desk_hero_4800.jpeg);
   }
 }
 .hero__title {
