--- a/css/main.css
+++ b/css/main.css
@@ -811,24 +811,24 @@ img {
 }
 @media screen and (max-width: 767px) {
   .hero--bg {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(var(--hero-gradient)), to(var(--hero-gradient))), url(../../images/mobile/studio/hero/mob_hero_480.jpg);
-    background-image: linear-gradient(var(--hero-gradient), var(--hero-gradient)), url(../../images/mobile/studio/hero/mob_hero_480.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(var(--hero-gradient)), to(var(--hero-gradient))), url(../images/mobile/studio/hero/mob_hero_480.jpg);
+    background-image: linear-gradient(var(--hero-gradient), var(--hero-gradient)), url(../images/mobile/studio/hero/mob_hero_480.jpg);
   }
 }
 @media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
   .hero--bg {
-    background-image: url("../../images/mobile/studio/hero/mob_hero_960.jpg");
+    background-image: url("../images/mobile/studio/hero/mob_hero_960.jpg");
   }
 }
 @media screen and (max-width: 767px) and (min-device-pixel-ratio: 3), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 3), screen and (max-width: 767px) and (min-resolution: 288dpi), screen and (max-width: 767px) and (min-resolution: 3dppx) {
   .hero--bg {
-    background-image: url("../../images/mobile/studio/hero/mob_hero_1440.jpg");
+    background-image: url("../images/mobile/studio/hero/mob_hero_1440.jpg");
   }
 }
 @media screen and (min-width: 768px) {
   .hero--bg {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(var(--hero-gradient)), to(var(--hero-gradient))), url("../../images/tablet/studio/hero/tab_hero_768.jpg");
-    background-image: linear-gradient(var(--hero-gradient), var(--hero-gradient)), url("../../images/tablet/studio/hero/tab_hero_768.jpg");
+    background-image: -webkit-gradient(linear, left top, left bottom, from(var(--hero-gradient)), to(var(--hero-gradient))), url("../images/tablet/studio/hero/tab_hero_768.jpg");
+    background-image: linear-gradient(var(--hero-gradient), var(--hero-gradient)), url("../images/tablet/studio/hero/tab_hero_768.jpg");
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
@@ -838,7 +838,7 @@ img {
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 3), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 3), screen and (min-width: 768px) and (min-resolution: 288dpi), screen and (min-width: 768px) and (min-resolution: 3dppx) {
   .hero--bg {
-    background-image: url("../../images/tablet/studio/hero/tab_hero_2304.jpg");
+    background-image: url("../images/tablet/studio/hero/tab_hero_2304.jpg");
   }
 }
 @media screen and (min-width: 1200px) {
