--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -21,17 +21,17 @@
           var(--hero-gradient),
           var(--hero-gradient)
         ),
-        url(../../images/mobile/studio/hero/mob_hero_480.jpg);
+        url(../images/mobile/studio/hero/mob_hero_480.jpg);
 
       @media screen and (min-device-pixel-ratio: 2),
         screen and (min-resolution: 192dpi),
         screen and (min-resolution: 2dppx) {
-        background-image: url("../../images/mobile/studio/hero/mob_hero_960.jpg");
+        background-image: url("../images/mobile/studio/hero/mob_hero_960.jpg");
       }
       @media screen and (min-device-pixel-ratio: 3),
         screen and (min-resolution: 288dpi),
         screen and (min-resolution: 3dppx) {
-        background-image: url("../../images/mobile/studio/hero/mob_hero_1440.jpg");
+        background-image: url("../images/mobile/studio/hero/mob_hero_1440.jpg");
       }
     }
 
@@ -40,7 +40,7 @@
           var(--hero-gradient),
           var(--hero-gradient)
         ),
-        url("../../images/tablet/studio/hero/tab_hero_768.jpg");
+        url("../images/tablet/studio/hero/tab_hero_768.jpg");
       @media screen and (min-device-pixel-ratio: 2),
         screen and (min-resolution: 192dpi),
         screen and (min-resolution: 2dppx) {
@@ -49,7 +49,7 @@
       @media screen and (min-device-pixel-ratio: 3),
         screen and (min-resolution: 288dpi),
         screen and (min-resolution: 3dppx) {
-        background-image: url("../../images/tablet/studio/hero/tab_hero_2304.jpg");
+        background-image: url("../images/tablet/studio/hero/tab_hero_2304.jpg");
       }
     }
 
