--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,16 +7,16 @@
   top: 50%;
   left: 50%;
 
-  height: 100%;
-  width: 100%;
+  height: 95%;
+  width: 95%;
 
   @media screen and (min-width: 480px) {
-    width: 450px;
-    height: 609px;
+    max-width: 450px;
+    max-height: 609px;
   }
   @media screen and (min-width: 1200px) {
-    width: 528px;
-    height: 581px;
+    max-width: 528px;
+    max-height: 581px;
   }
 
   background-color: var(--main-bcg-color);
