--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -10,6 +10,7 @@
     @media screen and (min-width: 768px) {
       display: flex;
       align-items: baseline;
+      justify-content: space-around;
     }
 
     @media screen and (max-width: 1199px) {
@@ -21,11 +22,6 @@
 .footer__address {
   @media screen and (max-width: 767px) {
     margin-bottom: 60px;
-  }
-
-  @media screen and (min-width: 768px) {
-    margin-left: auto;
-    margin-right: 165px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -51,10 +47,6 @@
 }
 
 .footer-networks {
-  @media screen and (min-width: 768px) {
-    margin-right: auto;
-  }
-
   @media screen and (min-width: 1200px) {
     margin-right: auto;
     margin-left: 70px;
@@ -164,7 +156,7 @@
     border-radius: 4px;
 
     @media screen and (min-width: 480px) {
-      width: 480px;
+      width: 100%;
     }
 
     @media screen and (min-width: 768px) {
