--- a/sass/layouts/_gallary.scss
+++ b/sass/layouts/_gallary.scss
@@ -6,8 +6,10 @@
   }
 
   &__item {
-    &:not(last-child) {
-      margin-bottom: 30px;
+    @media screen and (max-width: 768px) {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
     }
     @media screen and (min-width: 768px) {
       margin: 15px;
