--- a/css/main.css
+++ b/css/main.css
@@ -1715,8 +1715,8 @@ img {
   position: relative;
   display: block;
   background-color: var(--main-bcg-color);
-  height: 100%;
-  width: 100%;
+  max-width: 450px;
+  max-height: 609px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
