--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -241,6 +241,10 @@
     font-size: 12px;
     line-height: 1.1666;
   }
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.1428;
+  }
 }
 
 .pasiv-link::after {
