--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -9,13 +9,7 @@
 
   max-width: 450px;
   max-height: 609px;
-  // height: 100%;
-  // width: 100%;
 
-  @media screen and (min-width: 768px) {
-    width: 450px;
-    height: 609px;
-  }
   @media screen and (min-width: 1200px) {
     position: absolute;
     top: 50%;
@@ -23,8 +17,8 @@
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms var(--main-cubic);
 
-    width: 528px;
-    height: 581px;
+    max-width: 528px;
+    max-height: 581px;
   }
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
