--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -26,12 +26,20 @@
       @media screen and (min-device-pixel-ratio: 2),
         screen and (min-resolution: 192dpi),
         screen and (min-resolution: 2dppx) {
-        background-image: url("../images/mobile/studio/hero/mob_hero_960.jpg");
+        background-image: linear-gradient(
+            var(--hero-gradient),
+            var(--hero-gradient)
+          ),
+          url("../images/mobile/studio/hero/mob_hero_960.jpg");
       }
       @media screen and (min-device-pixel-ratio: 3),
         screen and (min-resolution: 288dpi),
         screen and (min-resolution: 3dppx) {
-        background-image: url("../images/mobile/studio/hero/mob_hero_1440.jpg");
+        background-image: linear-gradient(
+            var(--hero-gradient),
+            var(--hero-gradient)
+          ),
+          url("../images/mobile/studio/hero/mob_hero_1440.jpg");
       }
     }
 
@@ -44,12 +52,20 @@
       @media screen and (min-device-pixel-ratio: 2),
         screen and (min-resolution: 192dpi),
         screen and (min-resolution: 2dppx) {
-        background-image: url("../images/tablet/studio/hero/tab_hero_1536.jpg");
+        background-image: linear-gradient(
+            var(--hero-gradient),
+            var(--hero-gradient)
+          ),
+          url("../images/tablet/studio/hero/tab_hero_1536.jpg");
       }
       @media screen and (min-device-pixel-ratio: 3),
         screen and (min-resolution: 288dpi),
         screen and (min-resolution: 3dppx) {
-        background-image: url("../images/tablet/studio/hero/tab_hero_2304.jpg");
+        background-image: linear-gradient(
+            var(--hero-gradient),
+            var(--hero-gradient)
+          ),
+          url("../images/tablet/studio/hero/tab_hero_2304.jpg");
       }
     }
 
@@ -62,12 +78,20 @@
       @media screen and (min-device-pixel-ratio: 2),
         screen and (min-resolution: 192dpi),
         screen and (min-resolution: 2dppx) {
-        background-image: url(../images/desktop/studio/hero/desk_hero_3200.jpeg);
+        background-image: linear-gradient(
+            var(--hero-gradient),
+            var(--hero-gradient)
+          ),
+          url(../images/desktop/studio/hero/desk_hero_3200.jpeg);
       }
       @media screen and (min-device-pixel-ratio: 3),
         screen and (min-resolution: 288dpi),
         screen and (min-resolution: 3dppx) {
-        background-image: url(../images/desktop/studio/hero/desk_hero_4800.jpeg);
+        background-image: linear-gradient(
+            var(--hero-gradient),
+            var(--hero-gradient)
+          ),
+          url(../images/desktop/studio/hero/desk_hero_4800.jpeg);
       }
       padding-top: 200px;
       padding-bottom: 200px;
